@@ -58,6 +58,8 @@ dpkg (1.16.2) UNRELEASED; urgency=low
   * Improve and clarify dpkg-shlibdeps superfluous linking warning messages.
     Based on a patch by Peter Eisentraut <petere@debian.org>. Closes: #656496
   * Relax --merge-avail Packages file parser, to not fail on bogus versions.
+  * When building only arch-indep binaries with «dpkg-buildpackage -A», name
+    the .changes file using ‘all’ as architecture. Closes: #661638
 
   [ Raphaël Hertzog ]
   * Update Dpkg::Shlibs to look into multiarch paths when cross-building
